--- a/.github/workflows/blog-post-workflows.yml
+++ b/.github/workflows/blog-post-workflows.yml
@@ -14,4 +14,4 @@ jobs:
       - name: Pull in dev.to posts
         uses: gautamkrishnar/blog-post-workflow@master
         with:
-          feed_list: "https://jonahthomas.netlify.app/post/"
+          feed_list: "https://jonahthomas.netlify.app/index.xml"
